React/useState 추가

--- a/Javascript/React/basic/1.Hooks.md
+++ b/Javascript/React/basic/1.Hooks.md
@@ -10,3 +10,42 @@ useEffect(() => {
   };
 }, []);
 ```
+
+### useState
+
+1. useState의 초기값을 업데이트하기 위해서는 setState 메서드에 콜백함수를 전달한다. 파라미터는 prevState 값이 담겨온다.
+2. 무거운 작업이 initialState가 될떄는 useState 메서드에 콜백함수를 전달하여, state가 변경될때마다 랜더링 되어 무거운 작업이 실행되는것을 방지해준다. `useState lazy initailzation`
+
+```js
+
+
+import {useState} from 'react';
+
+const heavyWork = () => {
+  console.log('무거운 작업')
+  return ['홍길동', '김민수'];
+}
+
+function App() {
+  // initialState로 무거운 작업을 전달 시, state가 변경될때마다 해당 작업이 렌더링되며 실행된다.
+  // 위의 작업을 방지하기 위해 useState 메서드에 콜백함수를 전달하여 초기 렌더링시에만 작업이 진행되도록 변경한다.
+  const [names. setNames] = useState(() =? {
+    return heavyWork();
+  });
+  const [input, setInput] = useState('');
+
+  const handleInputChange = (e) => {
+    setInput(e.target.value);
+  }
+
+  const handleUpload = () => {
+    // 이전 state의 값을 받아오기 위해서는 setState 메서드의 파라미터에 콜백함수를 전달하여 update를 한다.
+    // prevState를 파라미터로 받는다. 
+    setNames((prevState) => {
+      return [input, ...prevState];
+    });
+  }
+
+
+}
+```
