파이썬/구현문제/정다면체

--- a/Algorithm/Python/grammar/list.ipynb
+++ b/Algorithm/Python/grammar/list.ipynb
@@ -98,6 +98,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "[1, 2, 3, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트 합치기\n",
+    "print(sum([1, 2, 3, 4, 5]))               # 내부의 값을 합친다.\n",
+    "print(sum([[1, 2, 3], [5, 6, 7]], []))    # 2중 리스트를 하나의 리스트로 합친다.\n",
+    "\n",
+    "a = [1,2,3]\n",
+    "b = [4,5,6]\n",
+    "a.extend(b)\n",
+    "print(a)     # 2개의 리스트를 합친다."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -122,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
