--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/answer.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/answer.ipynb
@@ -73,6 +73,37 @@
     "\n",
     "print(ave, res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "567"
+     ]
+    }
+   ],
+   "source": [
+    "# 정다면체\n",
+    "n, m = map(int, input().split())\n",
+    "cnt = [0] * (n + m + 3)\n",
+    "for i in range(1, n + 1):\n",
+    "  for j in range(1, m + 1):\n",
+    "    cnt[i + j] += 1           # 더해지는 값을 인덱스로 이용해 해당 인덱스의 값을 +1 해주어 최대로 많이 나오는 수를 구한다.\n",
+    "\n",
+    "max = -21470000\n",
+    "for i in range(n + m + 1):    # 최대값을 구한다.\n",
+    "  if cnt[i] > max:            # 배열의 값이 max 보다 크다면 \n",
+    "    max = cnt[i]              # 배열의 값을 max에 저장한다.\n",
+    "\n",
+    "for i in range(n + m + 1):    # 최대값을 가지고 있는 배열의 인덱스 값을 출력한다.\n",
+    "  if cnt[i] == max:\n",
+    "    print(i, end=' ')"
+   ]
   }
  ],
  "metadata": {
@@ -91,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
