--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/practice.ipynb
@@ -151,12 +151,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 6 7 "
+     ]
+    }
+   ],
    "source": [
     "# 정다면체\n",
-    "\n"
+    "\n",
+    "# N, M은 4, 6, 8, 12, 20의 정다면체로 주어진다.\n",
+    "# 2개의 정다면체를 던져서 나온 수의 합 중 가장 확률이 높은 숫자를 출력하는 프로그램을 작성하라\n",
+    "\n",
+    "n, m = list(map(int, input().split()))\n",
+    "\n",
+    "# 1,2,3,4  1,2,3,4,5,6\n",
+    "\n",
+    "arr = [0] * (n + m + 1)\n",
+    "for i in range(1, n + 1):\n",
+    "  for j in range(1, m + 1):\n",
+    "    arr[i + j] += 1\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "  if max(arr) == arr[i]:\n",
+    "    print(i, end=\" \")\n"
    ]
   }
  ],
@@ -176,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
