Python/Basic Algorithm

--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/answer.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/answer.ipynb
@@ -104,6 +104,99 @@
     "  if cnt[i] == max:\n",
     "    print(i, end=' ')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 자릿수의 합\n",
+    "\n",
+    "# n = int(input())\n",
+    "# a = list(map(int, input().split()))\n",
+    "\n",
+    "n = 3\n",
+    "a = [125, 15232, 97]\n",
+    "\n",
+    "def digit_sum(x):\n",
+    "  sum = 0\n",
+    "  while x > 0:\n",
+    "    sum += x % 10    \n",
+    "    x = x // 10\n",
+    "  return sum;\n",
+    "\n",
+    "def digit_sum2(x):\n",
+    "  sum = 0\n",
+    "  for i in str(x):\n",
+    "    sum += int(i)\n",
+    "  return sum\n",
+    "\n",
+    "\n",
+    "max = -2147\n",
+    "for x in a:\n",
+    "  tot = digit_sum2(x)\n",
+    "  if tot > max:\n",
+    "    max = tot\n",
+    "    res = x\n",
+    "\n",
+    "print(res)\n",
+    "\n",
+    "\"\"\"\n",
+    "while x > 0:\n",
+    "  sum += x % 10   x -> 125  125 % 10\n",
+    "  x = x // 10\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 소수의 개수 (에라토스네스의 체)\n",
+    "\n",
+    "# 20까지의 소수를 찾아야한다면 2 ~ 20까지 돌면서 n의 배수는 다 지워주며 진행하면 된다.\n",
+    "# 2의 배수, 3의 배수, 4(2의 배수임), 5의 배수 등등 배수들은 해당하는 n을 가지므로 소수가 아니다. (제외시키는 작업)\n",
+    "# 여기서는 배열을 만들어 1을 체크하는 방식으로 진행했다.\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "ch = [0] * (n + 1)\n",
+    "\n",
+    "cnt = 0\n",
+    "for i in range(2, n + 1):\n",
+    "  if ch[i] == 0:\n",
+    "    cnt += 1\n",
+    "    for j in range(i, n + 1, i):  # step을 i로 설정하여 i 배수를 모두 1로 체크한다.\n",
+    "      ch[j] = 1\n",
+    "\n",
+    "print(cnt)  # 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 뒤집은 소수\n",
+    "\n",
+    "n = 5\n",
+    "a = [32, 55, 62, 3700, 250]\n",
+    "\n",
+    "def reverse(x):\n",
+    "  \n"
+   ]
   }
  ],
  "metadata": {
