--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/practice.ipynb
@@ -181,6 +181,88 @@
     "  if max(arr) == arr[i]:\n",
     "    print(i, end=\" \")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 자릿수의 합\n",
+    "\n",
+    "# n = int(input())\n",
+    "# d = list(map(int, input().split()))\n",
+    "\n",
+    "# print(n, d)\n",
+    "\n",
+    "n = 3\n",
+    "d = [125, 15232, 97, 292929]\n",
+    "\n",
+    "result = []\n",
+    "for i in range(len(d)):\n",
+    "  s = 0\n",
+    "  for j in str(d[i]):\n",
+    "    s += int(j)\n",
+    "  result.append(s)\n",
+    "\n",
+    "result = [(index, value) for index, value in enumerate(result)]\n",
+    "print(result)\n",
+    "\n",
+    "max = 0\n",
+    "for item in result:\n",
+    "  if item[1] > max:\n",
+    "    max = item[1]\n",
+    "    idx = item[0]\n",
+    "\n",
+    "print(d[idx])\n",
+    "\n",
+    "\n",
+    "# 3\n",
+    "# 125, 15232, 97"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True 23\n",
+      "False 55\n",
+      "False 26\n",
+      "True 73\n",
+      "False 52\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 뒤집은 소수\n",
+    "\n",
+    "n = int(input())\n",
+    "a = list(map(int, input().split()))\n",
+    "\n",
+    "def reverse(x): \n",
+    "  g = []\n",
+    "  for i in str(x):\n",
+    "    g.append(i)\n",
+    "  g.reverse()\n",
+    "  return int(''.join(g))\n",
+    "\n",
+    "def isPrime(x):\n",
+    "  for i in range(2, x):\n",
+    "    if x % i == 0:\n",
+    "      return False\n",
+    "  return True\n",
+    "\n",
+    "# result = []\n",
+    "for i in a:\n",
+    "  m = reverse(i)\n",
+    "  v = isPrime(m)\n",
+    "  print(v, m)\n"
+   ]
   }
  ],
  "metadata": {
