--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/answer.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/answer.ipynb
@@ -185,9 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 73 "
+     ]
+    }
+   ],
    "source": [
     "# 뒤집은 소수\n",
     "\n",
@@ -195,7 +203,65 @@
     "a = [32, 55, 62, 3700, 250]\n",
     "\n",
     "def reverse(x):\n",
-    "  \n"
+    "    res = 0\n",
+    "    while x > 0:\n",
+    "        t = x % 10\n",
+    "        res = res * 10 + t              # 0 * 10 + (250 % 10 = 0  --> 10으로 나눈 나머지는 1의 자리수 부터 반환하게 만들어준다.)\n",
+    "        x = x // 10\n",
+    "    return res\n",
+    "\n",
+    "def isPrime(x):\n",
+    "    if x == 1:\n",
+    "        return False\n",
+    "    for i in range(2, x // 2 + 1):      # 16이라면 2로 나누었을때 8이 나온다, 15라면 //2+1 = 8 까지만 나누어봐도 소수인지 아닌지 판별이 가능하다.\n",
+    "        if x % i == 0:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "for x in a:\n",
+    "    tmp = reverse(x)\n",
+    "    if isPrime(tmp):\n",
+    "        print(tmp, end=\" \")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 주사위 게임\n",
+    "\n",
+    "n = int(input())\n",
+    "res = 0\n",
+    "\n",
+    "for i in range(n):\n",
+    "    tmp = input().split()\n",
+    "    tmp.sort()\n",
+    "    a, b, c = map(int, tmp)\n",
+    "\n",
+    "    if a == b and b == c:\n",
+    "        money = 10000 + a * 1000\n",
+    "    elif a == b or a == c:\n",
+    "        money = 1000 + a * 100\n",
+    "    elif b == c:\n",
+    "        money = 1000 + b * 100\n",
+    "    else:\n",
+    "        money = c * 100\n",
+    "    if money > res:\n",
+    "        res = money\n",
+    "\n",
+    "print(res)\n"
    ]
   }
  ],
@@ -215,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
