--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/practice.ipynb
@@ -223,21 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True 23\n",
-      "False 55\n",
-      "False 26\n",
-      "True 73\n",
-      "False 52\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 뒤집은 소수\n",
     "\n",
@@ -263,6 +251,48 @@
     "  v = isPrime(m)\n",
     "  print(v, m)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 주사위 게임\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "graph = []\n",
+    "for i in range(n):\n",
+    "    graph.append(list(map(int, input())))\n",
+    "\n",
+    "# 모두 다르다, 모두 같다, 2개만 같다의 정의를 내려줘야 한다.\n",
+    "\n",
+    "result = []\n",
+    "for arr in graph:\n",
+    "    if arr[0] == arr[1] and arr[1] == arr[2]:\n",
+    "        result.append(10000 + arr[0] * 1000)\n",
+    "    elif arr[0] == arr[1]:\n",
+    "        result.append(1000 + arr[0] * 100)\n",
+    "    elif arr[1] == arr[2]:\n",
+    "        result.append(1000 + arr[1] * 100)\n",
+    "    elif arr[0] == arr[2]:\n",
+    "        result.append(1000 + arr[2] * 100)\n",
+    "    else:\n",
+    "        result.append(max(arr) * 100)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(max(result))"
+   ]
   }
  ],
  "metadata": {
@@ -281,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
