python 기본문제풀이

--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/answer.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/answer.ipynb
@@ -263,6 +263,39 @@
     "\n",
     "print(res)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 점수계산\n",
+    "\n",
+    "n = int(input())\n",
+    "a = list(map(int, input().split()))\n",
+    "\n",
+    "# 1이면 count를 증가시켜 합을 계산시킨다...\n",
+    "\n",
+    "sum = 0\n",
+    "cnt = 0\n",
+    "for x in a:\n",
+    "  if x == 1:\n",
+    "    cnt += 1\n",
+    "    sum += cnt\n",
+    "  else:\n",
+    "    cnt = 0\n",
+    "    \n",
+    "print(sum)"
+   ]
   }
  ],
  "metadata": {
@@ -281,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
