--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/2.code-snippet/practice.ipynb
@@ -293,6 +293,53 @@
     "\n",
     "print(max(result))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n10\\n1 0 1 1 1 0 0 1 1 0\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 점수계산\n",
+    "\n",
+    "# 직전 문제를 맞췄다면 점수를 1점 가산하여 계산해주는 프로그램을 작성하라\n",
+    "\n",
+    "n = int(input())\n",
+    "a = list(map(int, input().split()))\n",
+    "\n",
+    "result = [0] * n\n",
+    "for i in range(len(a)):\n",
+    "  if a[i] == 1:\n",
+    "    if a[i - 1] > 0 and i > 0:\n",
+    "      result[i] = result[i - 1] + 1\n",
+    "    else:\n",
+    "      result[i] = 1\n",
+    "\n",
+    "print(sum(result))\n",
+    "\n",
+    "\"\"\"\n",
+    "10  -> 문제수\n",
+    "1 0 1 1 1 0 0 1 1 0 -> 맞춘 문제\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
@@ -311,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
