python/탐색&시뮬레이션/카드 역배치(1)

--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
@@ -94,6 +94,31 @@
     "\n",
     "# t0e0a1c2h0er\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 카드 역배치\n",
+    "\n",
+    "a = [i + 1 for i in range(20)]\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "# expend , +, \n",
+    "# 구간을 선택하는건 어떻게 만들까\n",
+    "# 구간을 자르고 역순으로 위치시키고 (a[::-1]) 다시 앞, 뒤 리스트를 이어주는 메서드를 만들어야 할듯"
+   ]
   }
  ],
  "metadata": {
@@ -112,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
