--- a/Algorithm/Python/grammar/list.ipynb
+++ b/Algorithm/Python/grammar/list.ipynb
@@ -4,40 +4,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "list (참고링크 ([파이썬 코딩도장](https://dojang.io/mod/page/view.php?id=2286)))\n",
+    "list (참고링크 ([파이썬 코딩도장](https://dojang.io/mod/page/view.php?id=2286)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1, 2, 3, 4, 5]\n",
+    "b = [6, 7, 8, 9, 10]\n",
     "\n",
-    "- append: 요소 하나 맨 뒤에 추가\n",
-    "  - list.append(value)  value는 list도 가능하다.\n",
-    "- extend: 리스트를 연결하여 확장\n",
-    "  - list.extend(list)\n",
-    "- insert: 특정 인덱스에 요소 추가\n",
-    "  - list.insert(idx, value)\n",
-    "- pop: 마지막 요소 또는 특정 인덱스의 요소를 삭제 및 해당 value를 return한다.\n",
-    "  - list.pop() or list.pop(idx)\n",
-    "  - `pop` 대신 `del`을 이용하여 삭제가능\n",
-    "  - del a[1]\n",
+    "# append: 요소 하나 맨 뒤에 추가\n",
+    "a.append(b)  #value는 list도 가능하다.\n",
+    "print(a)\n",
+    "# extend: 리스트를 연결하여 확장\n",
+    "a.extend(b)\n",
+    "print(a)\n",
+    "# insert: 특정 인덱스에 요소 추가\n",
+    "# a.insert(idx, value)\n",
+    "a.insert(0, 10)\n",
+    "# pop: 마지막 요소 또는 특정 인덱스의 요소를 삭제 및 해당 value를 return한다.\n",
+    "a.pop()   # a.pop()\n",
+    "a.pop(0)  # a.pop(idx)\n",
+    "# `pop` 대신 `del`을 이용하여 삭제가능\n",
+    "del a[1]\n",
     "\n",
-    "- index: 리스트의 특정 인덱스 값을 구할때 사용\n",
-    "  - list.index(value)\n",
-    "  - 같은 값이 여러개일 경우 처음 찾은 인덱스를 구한다.\n",
+    "# index: 리스트의 특정 인덱스 값을 구할때 사용\n",
+    "print(a.index(3))\n",
     "\n",
-    "- count: 특정 값의 개수를 구한다.\n",
-    "  - list.count(value)\n",
+    "#같은 값이 여러개일 경우 처음 찾은 인덱스를 구한다.\n",
     "\n",
-    "- reverse: 리스트의 요소를 반대로 뒤집는다.\n",
-    "  - list.reverse()\n",
+    "# count: 특정 값의 개수를 구한다.\n",
+    "a.append(10)\n",
+    "print(a.count(10))\n",
     "\n",
-    "- sort(): 리스트의 요소를 작은 순서대로 정렬\n",
-    "  - list.sort() or list.sort(reverse=True) : 리스트의 값을 작은 순서대로 정렬(오름차순) \n",
-    "  - list.sort(reverse=False) : 리스트의 값을 큰 순서대로 정렬(내림차순)\n",
+    "# reverse: 리스트의 요소를 반대로 뒤집는다.\n",
+    "a.reverse()\n",
     "\n",
-    "- clear(): 리스트의 모든 요소를 삭제\n",
-    "  - list.clear()\n",
-    "  - del a[:]\n",
+    "# sort(): 리스트의 요소를 작은 순서대로 정렬\n",
+    "a.sort()\n",
+    "a.sort(reverse=True)  # 리스트의 값을 작은 순서대로 정렬(오름차순) \n",
+    "a.sort(reverse=False) # 리스트의 값을 큰 순서대로 정렬(내림차순)\n",
     "\n",
-    "리스트 슬라이스로 조작하기\n",
-    "\n",
-    "- "
+    "# clear(): 리스트의 모든 요소를 삭제\n",
+    "a.clear()\n",
+    "del a[:]"
    ]
   },
   {
@@ -120,6 +133,46 @@
     "b = [4,5,6]\n",
     "a.extend(b)\n",
     "print(a)     # 2개의 리스트를 합친다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "(0, 1, 2, 3, 4, 5, 6, 7, 8, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [i for i in range(10)]\n",
+    "print(a)\n",
+    "\n",
+    "# 슬라이스\n",
+    "# 기본\n",
+    "# a[시작인덱스:끝인덱스]\n",
+    "\n",
+    "# 리스트\n",
+    "a = a[0:5]    # 0 부터 4까지 포함\n",
+    "a = a[1:1]    # 1 부터 0까지 포함 (빈 리스트를 반환)\n",
+    "a = a[1:2]    # 1 부터 1까지 포함 (하나의 요소를 가지는 리스트 반환)\n",
+    "a = a[4:-1]   # 4 부터 -2까지 포함 (-1은 제일 마지막 인덱스를 의미)\n",
+    "a = a[2:8:3]  # 2 부터 7까지 3의 증김으로 리스트 생성\n",
+    "a = a[:7]     # 처음부터 6까지 \n",
+    "a = a[7:]     # 7부터 마지막까지 리스트 생성\n",
+    "a = a[:]      # 전체 리스트를 가져옴\n",
+    "a = a[::2]    # 2를 증가시키면서 리스트 생성\n",
+    "a = a[5:1:-1] # 5부터 2까지 1씩 감소하면서 리스트 생성\n",
+    "a = a[::-1]   # 리스트의 뒤에서부터 1씩 감소하면서 리스트 생성\n",
+    "\n",
+    "b = tuple(range(10))\n",
+    "print(b)\n",
+    "\n"
    ]
   },
   {
