핵심유형풀이 연습 추가

--- a/Algorithm/Python/lecture/fastcompus/3.유형별-문제풀이/2.기본자료구조-핵심유형문제풀이.ipynb
+++ b/Algorithm/Python/lecture/fastcompus/3.유형별-문제풀이/2.기본자료구조-핵심유형문제풀이.ipynb
@@ -158,9 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# 풀이\n",
     "\n",
@@ -176,6 +184,8 @@
     "        # 중요도 값을 비교하여 현재 중요도 문서 리스트의 값과 같으면 pop을 시키지만\n",
     "        # m 과 같은 인덱스의 값이 나왔다면 해당 문서가 언제 출력이 되는지 알기위해 count를 출력한다.\n",
     "        # 람다식을 사용하여 max를 구하는 방식은 기억해야 할거 같다.\n",
+    "        # max(queue, key = lambda x: x[0]) -> max인 튜플값, \n",
+    "        # max(queue, key = lambda x: x[0])[0]  -> max인 튜플의 item 값\n",
     "        if queue[0][0] == max(queue, key = lambda x: x[0])[0]:  \n",
     "            count += 1\n",
     "            if queue[0][1] == m:\n",
@@ -240,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
