--- a/Algorithm/Python/lecture/fastcompus/유형별 문제풀이 연습/2.핵심유형.ipynb
+++ b/Algorithm/Python/lecture/fastcompus/유형별 문제풀이 연습/2.핵심유형.ipynb
@@ -81,11 +81,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(5, 0)]\n",
+      "1\n",
+      "[(1, 0), (2, 1), (3, 2), (4, 3)]\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 백준 프린터 큐 1966\n",
+    "\n",
+    "# Queue 자료구조 사용\n",
+    "# 4개의 문서 (A, B, C, D) 중요도는 (2, 1, 4, 3) -> C, D, A, B를 인쇄하게 된다.\n",
+    "\n",
+    "\"\"\"\n",
+    "3     # 테스트케이스\n",
+    "1 0   # 문서의 개수, 언제 출력되는지 알고싶은 문서의 순서\n",
+    "5     # 중요도\n",
+    "4 2\n",
+    "1 2 3 4\n",
+    "6 0\n",
+    "1 1 9 1 1 1\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "t = int(input())\n",
+    "result = []\n",
+    "\n",
+    "for _ in range(t):\n",
+    "  count = 1\n",
+    "  n, m = list(map(int, input().split()))\n",
+    "  papers = list(map(int, input().split()))\n",
+    "\n",
+    "  queue = [(page, index) for index, page in enumerate(papers)]\n",
+    "\n",
+    "  print(queue)\n",
+    "\n",
+    "  while True:\n",
+    "    if queue[0][0] == max(queue, key = lambda x: x[0])[0]:\n",
+    "      if queue[0][1] == m:\n",
+    "        print(count)\n",
+    "        break\n",
+    "      else:\n",
+    "        queue.pop(0)\n",
+    "        count += 1\n",
+    "    else:\n",
+    "      queue.append(queue.pop(0))\n",
+    "\n",
+    "# print(\"\\n\".join(str(result)))  # result에 int 값이 들어갔다고 에러를 뱉음 str값이 들어가야 할듯\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "0\n",
+      "[(0, 1), (1, 2), (2, 3), (3, 4), (4, 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "papers = [1, 2, 3, 4, 5]\n",
+    "queue = [(page, index) for page, index in enumerate(papers)]\n",
+    "\n",
+    "i = max(queue, key = lambda x: x[0])[0]\n",
+    "print(i)\n",
+    "\n",
+    "print(queue[0][0])\n",
+    "\n",
+    "print(queue)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 백준 프린터 큐 1966"
+    "# 키로거\n",
+    "\n"
    ]
   }
  ],
