--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
@@ -149,6 +149,50 @@
     "for x in a3:\n",
     "  print(x, end=\" \")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 수의 합\n",
+    "\n",
+    "\"\"\"\n",
+    "메인 컨셥은 처음과 끝을 가리키는 인덱스를 욺직이는 방식으로 진행한다.\n",
+    "total이 m 보다 작을 경우\n",
+    "    rt(오른쪽인덱스)를 한칸 앞으로 움직이며 a[rt] 값을 total에 더하여 m 과 비교한다. \n",
+    "total이 m 과 같을 경우\n",
+    "    우리가 찾는 값이 나오면 count를 올려주고 lt(왼쪽인덱스)를 한칸 앞으로 움직이며 a[lt]값을 빼준다.\n",
+    "total이 m 보다 클 경우\n",
+    "    total의 값을 줄여주기위해 a[lt]를 total에서 빼주고 lt를 한칸 전진시킨다.\n",
+    "\n",
+    "while 문의 break 포인트는 rt 값이 n 보다 커질때이다.\n",
+    "\"\"\"\n",
+    "\n",
+    "n, m = list(map(int, input().split()))\n",
+    "a = list(map(int, input().split()))\n",
+    "\n",
+    "lt = 0\n",
+    "rt = 1\n",
+    "tot = a[0]\n",
+    "cnt = 0\n",
+    "\n",
+    "while True:\n",
+    "    if tot < m:\n",
+    "        if rt < n:\n",
+    "            tot += a[rt]\n",
+    "            rt += 1\n",
+    "        else:\n",
+    "            break\n",
+    "    elif tot == m:\n",
+    "        cnt += 1\n",
+    "        tot -= a[lt]\n",
+    "        lt += 1\n",
+    "    else:\n",
+    "        tot -= a[lt]\n",
+    "        lt += 1\n"
+   ]
   }
  ],
  "metadata": {
@@ -167,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
