--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
@@ -232,14 +232,19 @@
    "source": [
     "# 수들의 합\n",
     "\n",
-    "n, m = list(map(int, input().split()))\n",
-    "a = list(map(int, input().split()))\n",
+    "# n, m = list(map(int, input().split()))\n",
+    "# a = list(map(int, input().split()))\n",
     "\n",
     "# cnt = 0\n",
     "# for i in range(n):\n",
     "#   for j in range(i + 1, n + 1):     # 시간 초과로 통과 못함\n",
     "#     if sum(a[i:j]) == m:\n",
     "#       cnt += 1\n",
+    "\n",
+    "n = 8\n",
+    "m = 3\n",
+    "a = [1, 2, 1, 3, 1, 1, 1, 2]\n",
+    "\n",
     "\n"
    ]
   }
