--- a/DataBase/MySQL/사용자추가-권한.md
+++ b/DataBase/MySQL/사용자추가-권한.md
@@ -30,7 +30,6 @@ drop user '사용자 ID'@'HOST';
 show grants for '사용자 ID'@'HOST';
 ```
 
-
 <br>
 
 ### 권한 추가
@@ -55,4 +54,18 @@ grant all privileges on *.* to '사용자 ID'@'host' identified by '비밀번호
 
 ```sql
 revoke all on DB명.테이블명 from 사용자ID;
+```
+
+<br>
+
+### root 비밀번호 변경
+
+MySQL 8.0.33 버전
+
+```sql
+// localhost에서 접속 비밀번호 변경
+alter user 'root'@'localhost' identified with mysql_native_password by '변경할 비밀번호'
+
+// 외부 접속 비밀번호 변경
+alter user 'root'@'%' identified with mysql_native_password by '변경할 비밀번호'
 ```
