--- a/DataBase/MySQL/사용자추가-권한.md
+++ b/DataBase/MySQL/사용자추가-권한.md
@@ -38,8 +38,12 @@ show grants for '사용자 ID'@'HOST';
 -- 권한을 부여
 grant all privileges on DB명.테이블 to '사용자 ID'@'host';
 
+ex) grant all privileges on bord.* to 'noah'@'192.168.0.45';
+
 -- 권한을 주면서 비밀번호를 변경할 수 있다.
 grant all privileges on DB명.테이블 to '사용자 ID'@'host' identified by '비밀번호';
+
+ex) grant all privileges on bord.* to 'noah'@'192.168.0.45' identified by 'noah';
 
 -- DML 권한을 선택하여 부여가 가능하다.
 grant select, insert, update on DB명.테이블 to '사용자 ID'@'host' identified by '비밀번호';
