Python/탐색&시뮬레이션/격자판 최대값

--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
@@ -193,6 +193,50 @@
     "        tot -= a[lt]\n",
     "        lt += 1\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "155\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.stdin = open(\"./text.txt\", 'r')\n",
+    "\n",
+    "n = int(input())\n",
+    "a = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    "largest = -214700000\n",
+    "for i in range(n):\n",
+    "    sum1=sum2=0\n",
+    "    for j in range(n):\n",
+    "        sum1 += a[i][j]     # 행의 합\n",
+    "        sum2 += a[j][i]     # 열의 합\n",
+    "    if sum1 > largest:\n",
+    "        largest = sum1\n",
+    "    if sum2 > largest:\n",
+    "        largest = sum2\n",
+    "\n",
+    "sum1=sum2=0\n",
+    "for i in range(n):\n",
+    "    sum1 += a[i][i]\n",
+    "    sum2 += a[i][n - i - 1]\n",
+    "    \n",
+    "if sum1 > largest:\n",
+    "    largest = sum1\n",
+    "if sum2 > largest:\n",
+    "    largest = sum2\n",
+    "\n",
+    "print(largest)"
+   ]
   }
  ],
  "metadata": {
