--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
@@ -247,6 +247,90 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "155\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 격자판 최대합\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "# 2차원 배열 만들기\n",
+    "a = [list(map(int, input().split())) for _ in range(n)]\n",
+    "# a = []\n",
+    "# for i in range(n):\n",
+    "#     a.append(list(map(int, input().split())))\n",
+    "\n",
+    "# n = 3\n",
+    "# a = [\n",
+    "#     [10, 13, 10], \n",
+    "#     [12, 39, 30], \n",
+    "#     [11, 25, 50]\n",
+    "# ]\n",
+    "\n",
+    "# 접근\n",
+    "# 가로 세로는 더하면서 더한값이 크면 교체해주는 작업필요\n",
+    "# 가로에서 가장 큰 값, 세로에서 가장 큰 값, 대각선에서 가장 큰값\n",
+    "# 대각선은 (0, 0), (1, 1), (2, 2) ... (n, n)과 (n, 0), (n - 1, 1) ... (0, n)\n",
+    "\n",
+    "\n",
+    "def totalSum(type, arrayLen, index):\n",
+    "    totalValue = 0\n",
+    "    if type == 'x':\n",
+    "        for i in range(arrayLen):\n",
+    "            totalValue += a[index][i]\n",
+    "    if type == 'y':\n",
+    "        for i in range(arrayLen):\n",
+    "            totalValue += a[i][index]\n",
+    "    if type == 'du':    # 대각선 위에서 아래로\n",
+    "        for i in range(arrayLen):\n",
+    "            totalValue += a[i][i]\n",
+    "    if type == 'dd':    # 대각선 아래에서 위로\n",
+    "        for i in range(arrayLen):\n",
+    "            totalValue += a[arrayLen - i - 1][i]\n",
+    "    return totalValue\n",
+    "\n",
+    "maxRowValue = 0\n",
+    "for sa in a:\n",
+    "    # 가로 더하기\n",
+    "    value = sum(sa)\n",
+    "    if (maxRowValue < value):\n",
+    "        maxRowValue = value\n",
+    "    \n",
+    "maxColumnValue = 0\n",
+    "for i in range(n):\n",
+    "    # 세로 더하기\n",
+    "    eachTotalValue = totalSum(\"y\", n, i)\n",
+    "    if (maxColumnValue < eachTotalValue):\n",
+    "        maxColumnValue = eachTotalValue\n",
+    "    \n",
+    "\n",
+    "maxDiagonalValue = 0\n",
+    "for sa in a:\n",
+    "    ddValue = totalSum(\"dd\", n, 0)\n",
+    "    duValue = totalSum(\"du\", n, 0)\n",
+    "    if ddValue > duValue :\n",
+    "        maxDiagonalValue = ddValue\n",
+    "    else:\n",
+    "        maxDiagonalValue = duValue\n",
+    "    # 대각선 더하기\n",
+    "\n",
+    "result = [maxRowValue, maxColumnValue, maxDiagonalValue]\n",
+    "print(max(result))\n",
+    "\n",
+    "# print(maxRowValue, maxColumnValue, maxDiagonalValue)"
+   ]
   }
  ],
  "metadata": {
