Python/탐색&시뮬레이션/사과나무 init

--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
@@ -208,8 +208,8 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.stdin = open(\"./text.txt\", 'r')\n",
+    "# import sys\n",
+    "# sys.stdin = open(\"./text.txt\", 'r')  여기서는 동작 안함\n",
     "\n",
     "n = int(input())\n",
     "a = [list(map(int, input().split())) for _ in range(n)]\n",
