--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
@@ -331,6 +331,27 @@
     "\n",
     "# print(maxRowValue, maxColumnValue, maxDiagonalValue)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 사과나무(다이아몬드)\n",
+    "# n = int(input())\n",
+    "# a = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    "a = [\n",
+    "    [10, 13, 10, 12, 15],\n",
+    "    [12, 39, 30, 23, 11],\n",
+    "    [11, 25, 50, 53, 15],\n",
+    "    [19, 27, 29, 37, 27],\n",
+    "    [19, 13, 30, 13, 19]\n",
+    "]\n",
+    "\n",
+    "# 위에서부터 홀수의 중간값이 나올때까지 더하고, 아래서부터 홀수의 중간값을 제외한 값까지 더하면 될거 같다.\n"
+   ]
   }
  ],
  "metadata": {
