Python/탐색&시뮬레이션/모래시계

--- a/Algorithm/Python/grammar/list.ipynb
+++ b/Algorithm/Python/grammar/list.ipynb
@@ -181,7 +181,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# stack, queue 를 리스트로 구현하기"
+    "# stack, queue 를 리스트로 구현하기\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# list 를 queue 로 구현\n",
+    "# 앞의 요소 pop 하여 뒤에 넣기\n",
+    "a = [1, 2, 3, 4, 5, 6]\n",
+    "a.append(a.pop(0))      # [2, 3, 4, 5, 6, 1]\n",
+    "print(a)\n",
+    "\n",
+    "# 뒤에 요소를 pop 하여 앞에 넣기\n",
+    "a = [1, 2, 3, 4, 5, 6]\n",
+    "a.insert(0, a.pop())    # [6, 1, 2, 3, 4, 5]"
    ]
   }
  ],
