--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
@@ -237,6 +237,99 @@
     "\n",
     "print(largest)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "379\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 사과나무\n",
+    "\n",
+    "n = 5\n",
+    "a = [\n",
+    "    [10, 13, 10, 12, 15],\n",
+    "    [12, 39, 30, 23, 11],\n",
+    "    [11, 25, 50, 53, 15],\n",
+    "    [19, 27, 29, 37, 27],\n",
+    "    [19, 13, 30, 13, 19],\n",
+    "]\n",
+    "\n",
+    "total = 0\n",
+    "midValue = n // 2\n",
+    "s = e = midValue\n",
+    "\n",
+    "for i in range(n):\n",
+    "  for j in range(s, e + 1):\n",
+    "    total += a[i][j]\n",
+    "  if i < midValue:\n",
+    "    s -= 1\n",
+    "    e += 1\n",
+    "  else:\n",
+    "    s += 1\n",
+    "    e -= 1\n",
+    "\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "362\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 곳감(모래시계)\n",
+    "\n",
+    "n = 5\n",
+    "a = [\n",
+    "    [10, 13, 10, 12, 15],\n",
+    "    [12, 39, 30, 23, 11],\n",
+    "    [11, 25, 50, 53, 15],\n",
+    "    [19, 27, 29, 37, 27],\n",
+    "    [19, 13, 30, 13, 19],\n",
+    "]\n",
+    "m = 3\n",
+    "\n",
+    "for i in range(m):\n",
+    "  h, t, k = map(int, input().split())\n",
+    "  if t == 0:\n",
+    "    for _ in range(k):\n",
+    "      a[h-1].append(a[h-1].pop(0))\n",
+    "  else:\n",
+    "    for _ in range(k):\n",
+    "      a[h-1].insert(0, a[h-1].pop())\n",
+    "\n",
+    "res = 0\n",
+    "s = 0\n",
+    "e = n - 1\n",
+    "for i in range(n):\n",
+    "  for j in range(s, e + 1):\n",
+    "    res += a[i][j]\n",
+    "  if i  < n // 2:\n",
+    "    s += 1\n",
+    "    e -= 1\n",
+    "  else:\n",
+    "    s -= 1\n",
+    "    e += 1\n",
+    "\n",
+    "print(res)"
+   ]
   }
  ],
  "metadata": {
@@ -255,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
