--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
@@ -334,23 +334,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 사과나무(다이아몬드)\n",
+    "# 사과나무(다이아몬드) 다시 풀어보자...\n",
     "# n = int(input())\n",
     "# a = [list(map(int, input().split())) for _ in range(n)]\n",
     "\n",
+    "n = 5\n",
     "a = [\n",
     "    [10, 13, 10, 12, 15],\n",
     "    [12, 39, 30, 23, 11],\n",
     "    [11, 25, 50, 53, 15],\n",
     "    [19, 27, 29, 37, 27],\n",
-    "    [19, 13, 30, 13, 19]\n",
+    "    [19, 13, 30, 13, 19],\n",
     "]\n",
     "\n",
-    "# 위에서부터 홀수의 중간값이 나올때까지 더하고, 아래서부터 홀수의 중간값을 제외한 값까지 더하면 될거 같다.\n"
+    "# 위에서부터 홀수의 중간값이 나올때까지 더하고, 아래서부터 홀수의 중간값을 제외한 값까지 더하면 될거 같다.\n",
+    "# print(midValue)\n",
+    "total = 0\n",
+    "s = e = n // 2\n",
+    "# for i in range(n):\n",
+    "    \n",
+    "\n",
+    "\n",
+    "#                     n[0][2]\n",
+    "#           n[1][1] + n[1][2] + n[1][3]\n",
+    "# n[2][0] + n[2][1] + n[2][2] + n[2][3] + n[2][4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "362\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 곳감(모래시계)\n",
+    "\n",
+    "# n = int(input())\n",
+    "# a = [list(map(int, input().split())) for _ in range(n)]\n",
+    "# m = int(input())\n",
+    "\n",
+    "n = 5\n",
+    "a = [\n",
+    "    [10, 13, 10, 12, 15],\n",
+    "    [12, 39, 30, 23, 11],\n",
+    "    [11, 25, 50, 53, 15],\n",
+    "    [19, 27, 29, 37, 27],\n",
+    "    [19, 13, 30, 13, 19],\n",
+    "]\n",
+    "m = 3\n",
+    "\n",
+    "for _ in range(m):\n",
+    "  justifyArray = list(map(int, input().split()))\n",
+    "  targetArray = a[justifyArray[0] - 1]\n",
+    "  for j in range(justifyArray[2]):\n",
+    "    if justifyArray[1] == 0:\n",
+    "      targetArray.append(targetArray.pop(0))\n",
+    "    elif justifyArray[1] == 1:\n",
+    "      targetArray.insert(0, targetArray.pop())\n",
+    "\n",
+    "total = 0\n",
+    "s = 0\n",
+    "e = n\n",
+    "for i in range(n):\n",
+    "  for j in range(s, e):\n",
+    "    total += a[i][j]\n",
+    "  if i < n // 2:\n",
+    "    s += 1\n",
+    "    e -= 1\n",
+    "  else:\n",
+    "    s -= 1\n",
+    "    e += 1\n",
+    "\n",
+    "print(total)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -370,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
