Python/탐색&시뮬레이션/스도쿠

--- a/Algorithm/Python/grammar/list.ipynb
+++ b/Algorithm/Python/grammar/list.ipynb
@@ -201,6 +201,19 @@
     "a = [1, 2, 3, 4, 5, 6]\n",
     "a.insert(0, a.pop())    # [6, 1, 2, 3, 4, 5]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all() 함수는 반복문으로 순회할 수 있는 모든 객체를 인자로 받는다.\n",
+    "all([True, True, True, True])\n",
+    "all([True, True, True, False])\n",
+    "\n",
+    "all(num > 0 for num in [1, 2, 3, 4])"
+   ]
   }
  ],
  "metadata": {
