--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
@@ -330,6 +330,120 @@
     "\n",
     "print(res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 봉우리\n",
+    "# 시작 지점에서 상하좌우의 값이 모두 작으면 봉우리다. \n",
+    "# 그냥 한 지점에서 상하좌우가 모두 작으면 봉우리인것\n",
+    "\n",
+    "# n = int(input())\n",
+    "# a = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    " # all() 메서드를 잘 알아둬야 한다.\n",
+    "\n",
+    "n = 5\n",
+    "a = [\n",
+    "  [5, 3, 7, 2, 3],\n",
+    "  [3, 7, 1, 6, 1],\n",
+    "  [7, 2, 5, 3, 4],\n",
+    "  [4, 3, 6, 4, 1],\n",
+    "  [8, 7, 3, 5, 2]\n",
+    "]\n",
+    "\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "\n",
+    "a.insert(0, [0]*n)\n",
+    "a.append([0]*n)\n",
+    "for x in a:\n",
+    "  x.insert(0, 0)\n",
+    "  x.append(0)\n",
+    "\n",
+    "cnt = 0\n",
+    "for i in range(1, n + 1):\n",
+    "  for j in range(1, n + 1):\n",
+    "    if all(a[i][j] > a[i + dy[k]][j + dx[k]] for k in range(4)):   \n",
+    "      cnt += 1\n",
+    "\n",
+    "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 스도쿠 검사\n",
+    "\n",
+    "# 문제풀이 컨셉\n",
+    "#   1. 행과 열을 순차적으로 진행하며 1-9까지 모든 숫자가 있는지 확인\n",
+    "#     1-1.  모든 행과 열의 합이 같다면 가로, 세로는 확인됨\n",
+    "#   2. 문제는 9개의 구역 내에서 숫자가 잘 들어왔는지에 대한 확인이 필요\n",
+    "#     2-1.  0-2, 3-6, 7-9 까지 행열을 순차적으로 돌려면 어떻게 해야할까\n",
+    "#     2-2.  4중 for문을 만들어 큰틀의 그룹을 만들고 그 그룹내를 돌며 행열의 세개의 값이 쌓이도록 만듬\n",
+    "\n",
+    "a = [\n",
+    "  [1, 4, 3, 6, 2, 8, 5, 7, 9],\n",
+    "  [5, 7, 2, 1, 3, 9, 4, 6, 8],\n",
+    "  [9, 8, 6, 7, 5, 4, 2, 3, 1],\n",
+    "  [3, 9, 1, 5, 4, 2, 7, 8, 6],\n",
+    "  [4, 6, 8, 9, 1, 7, 3, 5, 2],\n",
+    "  [7, 2, 5, 8, 6, 3, 9, 1, 4],\n",
+    "  [2, 3, 7, 4, 8, 1, 6, 9, 5],\n",
+    "  [6, 1, 9, 2, 7, 5, 8, 4, 3],\n",
+    "  [8, 5, 4, 3, 9, 6, 1, 2, 7]\n",
+    "]\n",
+    "\n",
+    "# 리스트에서 중복된 값을 어떻게 찾는가\n",
+    "def isValid():\n",
+    "  # 가로, 세로\n",
+    "  for i in range(9):\n",
+    "    chk1 = [0]*9\n",
+    "    chk2 = [0]*9\n",
+    "    for j in range(9):\n",
+    "      chk1[a[i][j] - 1] = 1\n",
+    "      chk2[a[j][i] - 1] = 1\n",
+    "    if sum(chk1) != 9 or sum(chk2) != 9:\n",
+    "      return False\n",
+    "    \n",
+    "  # 그룹을 선택하고 해당하는 그룹의 값을 가져온다.\n",
+    "  for i in range(3):          # x 축으로 그룹을 3개로 분리한다.\n",
+    "    for j in range(3):        # y 축으로 그룹을 3개로 분리한다.\n",
+    "      chk3 = [0]*9\n",
+    "      for k in range(3):      # x와 y로 선택된 그룹하나의 y축\n",
+    "        for s in range(3):    # x와 y로 선택된 그룹하나의 x축\n",
+    "          chk3[a[i * 3 + k][j * 3 + s] - 1] = 1\n",
+    "      if sum(chk3) != 9:\n",
+    "        return False\n",
+    "  return True\n",
+    "\n",
+    "if isValid():\n",
+    "  print(\"YES\")\n",
+    "else:\n",
+    "  print(\"NO\")"
+   ]
   }
  ],
  "metadata": {
