--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
@@ -416,9 +416,97 @@
     "    s -= 1\n",
     "    e += 1\n",
     "\n",
-    "print(total)\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 봉우리  # 테스트 통과 못함...\n",
     "\n",
-    "\n"
+    "\n",
+    "n = 7\n",
+    "a = [\n",
+    "  [27, 33, 80, 73, 19, 23, 15],\n",
+    "  [48, 84, 61, 3, 36, 9, 62],\n",
+    "  [87, 57, 3, 14, 69, 17, 22 ],\n",
+    "  [17, 57, 86, 21, 85, 51, 82],\n",
+    "  [7, 94, 66, 21, 19, 41, 82 ],\n",
+    "  [27, 5, 59, 28, 26, 77, 64 ],\n",
+    "  [5, 46, 4, 63, 76, 99, 8],\n",
+    "]\n",
+    "\n",
+    "dy = [-1, 1, 0, 0]\n",
+    "dx = [0, 0, -1, 1]\n",
+    "\n",
+    "# n = int(input())\n",
+    "# a = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    "\n",
+    "a.insert(0, [0]*n)\n",
+    "a.append([0]*n)\n",
+    "for x in a:\n",
+    "  x.insert(0, 0)\n",
+    "  x.append(0)\n",
+    "\n",
+    "cnt = 0\n",
+    "for i in range(n):\n",
+    "  for j in range(n):\n",
+    "    isBig = True\n",
+    "    for k in range(4):\n",
+    "      value = a[i][j]\n",
+    "      newY = i + dy[k]\n",
+    "      newX = j + dx[k]\n",
+    "      compareValue = a[newY][newX]\n",
+    "      if value < compareValue:    # 모든 방향의 값보다 커야하는데 하나라도 작으면 false를 뱉는다.\n",
+    "        isBig = False\n",
+    "        break\n",
+    "    if isBig:\n",
+    "      cnt += 1\n",
+    "\n",
+    "print(cnt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 스토쿠 검사 다시 풀어보자\n",
+    "\n",
+    "a = [\n",
+    "  [1, 4, 3, 6, 2, 8, 5, 7, 9],\n",
+    "  [5, 7, 2, 1, 3, 9, 4, 6, 8],\n",
+    "  [9, 8, 6, 7, 5, 4, 2, 3, 1],\n",
+    "  [3, 9, 1, 5, 4, 2, 7, 8, 6],\n",
+    "  [4, 6, 8, 9, 1, 7, 3, 5, 2],\n",
+    "  [7, 2, 5, 8, 6, 3, 9, 1, 4],\n",
+    "  [2, 3, 7, 4, 8, 1, 6, 9, 5],\n",
+    "  [6, 1, 9, 2, 7, 5, 8, 4, 3],\n",
+    "  [8, 5, 4, 3, 9, 6, 1, 2, 7]\n",
+    "]\n",
+    "\n",
+    "# 리스트에서 중복된 값을 어떻게 찾는가"
    ]
   }
  ],
