--- a/Algorithm/Python/practice/Binary_Search/binarySeach.ipynb
+++ b/Algorithm/Python/practice/Binary_Search/binarySeach.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result not found\n"
+     ]
+    }
+   ],
    "source": [
     "def bs(array, target, start, end):\n",
     "    if start > end:\n",
@@ -17,7 +25,7 @@
     "    else:\n",
     "        return bs(array, target, mid + 1, end)\n",
     "\n",
-    "\n",
+    "# 10 15\n",
     "# 1 3 5 7 9 11 13 15 17 19\n",
     "\n",
     "n, target = list(map(int, input().split()))\n",
