--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/1.basic/basic.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/1.basic/basic.ipynb
@@ -165,9 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 12, 36]\n",
+      "[12, 36, 53]\n",
+      "0 23 1 12 2 36 3 53 4 19 \n",
+      "0 23 1 12 2 36 3 53 4 19 \n",
+      "YES\n",
+      "YES\n"
+     ]
+    }
+   ],
    "source": [
     "# 리스트와 내장함수(2)\n",
     "\n",
@@ -202,9 +215,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "0 0 0 \n",
+      "0 0 0 \n",
+      "0 0 0 \n"
+     ]
+    }
+   ],
    "source": [
     "# 2차원 리스트 생성과 접근\n",
     "\n",
@@ -252,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
