--- a/Algorithm/Python/grammar/list.ipynb
+++ b/Algorithm/Python/grammar/list.ipynb
@@ -54,31 +54,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "리스트에 map 사용하기\n",
+    "# 리스트에 map 사용하기\n",
     "\n",
-    "- `map`은 리스트의 요소를 지정된 함수로 처리해주는 함수이다. (원본 리스트는 변경하지않고 새 리스트를 생성한다.)\n",
-    "- list(map(함수, 리스트))\n",
+    "# `map`은 리스트의 요소를 지정된 함수로 처리해주는 함수이다. (원본 리스트는 변경하지않고 새 리스트를 생성한다.)\n",
+    "# list(map(함수, 리스트))\n",
     "\n",
-    "```python\n",
-    ">>> a = [1.2, 2.5, 3.7, 4.6]\n",
-    ">>> a = list(map(int, a))\n",
-    ">>> a\n",
-    "[1, 2, 3, 4]\n",
-    "```\n",
     "\n",
-    "```python\n",
-    ">>> a = list(map(str, range(10)))\n",
-    ">>> a\n",
-    "['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']\n",
-    "```\n",
+    "a = [1.2, 2.5, 3.7, 4.6]\n",
+    "a = list(map(int, a))\n",
+    "print(a)        \n",
+    "# result : [1, 2, 3, 4]\n",
     "\n",
-    "`input().split()`과 `map`\n",
-    "- input().split()의 결과가 문자열 리스트이기떄문에 map을 사용하여 정의가 가능하다.\n",
-    "- input()을 단독으로 사용한다면 들어온 value를 리스트로 변환한다.\n",
-    "  - 10101 -> [1, 0, 1, 0, 1]"
+    "a = list(map(str, range(10)))\n",
+    "a               \n",
+    "# result : ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']\n",
+    "\n",
+    "\n",
+    "# `input().split()`과 `map`\n",
+    "# input().split()의 결과가 문자열 리스트이기떄문에 map을 사용하여 정의가 가능하다.\n",
+    "# input()을 단독으로 사용한다면 들어온 value를 리스트로 변환한다.\n",
+    "# 10101 -> [1, 0, 1, 0, 1]"
    ]
   },
   {
@@ -145,6 +145,7 @@
      "output_type": "stream",
      "text": [
       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[0, 1, 2, 3, 4]\n",
       "(0, 1, 2, 3, 4, 5, 6, 7, 8, 9)\n"
      ]
     }
@@ -159,6 +160,7 @@
     "\n",
     "# 리스트\n",
     "a = a[0:5]    # 0 부터 4까지 포함\n",
+    "print(a)\n",
     "a = a[1:1]    # 1 부터 0까지 포함 (빈 리스트를 반환)\n",
     "a = a[1:2]    # 1 부터 1까지 포함 (하나의 요소를 가지는 리스트 반환)\n",
     "a = a[4:-1]   # 4 부터 -2까지 포함 (-1은 제일 마지막 인덱스를 의미)\n",
@@ -171,8 +173,7 @@
     "a = a[::-1]   # 리스트의 뒤에서부터 1씩 감소하면서 리스트 생성\n",
     "\n",
     "b = tuple(range(10))\n",
-    "print(b)\n",
-    "\n"
+    "print(b)"
    ]
   },
   {
@@ -181,7 +182,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# stack, queue 를 리스트로 구현하기\n"
+    "# stack, queue 를 리스트로 구현하기\n",
+    "arr = [1, 2, 3, 4]\n",
+    "\n",
+    "# stack\n",
+    "\n",
+    "\n",
+    "# queue\n",
+    "arr.append(arr.pop(0))      # 맨 처음값을 뺴서 제일 뒤로 입력한다."
    ]
   },
   {
@@ -214,6 +222,46 @@
     "\n",
     "all(num > 0 for num in [1, 2, 3, 4])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 회문검사\n",
+    "word = input(\"단어 입력\")\n",
+    "\n",
+    "# case 1\n",
+    "isPalindrome = True\n",
+    "for i in range(len(word)//2):       # 0부터 문자열 길이의 절반만큼 반복\n",
+    "    if word[i] != word[-1-i]:       # 리스트의 뒤 부터 진행한다는 표현\n",
+    "        isPalindrome = False\n",
+    "        break\n",
+    "print(isPalindrome)\n",
+    "\n",
+    "# case 2\n",
+    "print(word == word[::-1])           # 원래 문자열과 반대로 뒤집은 문자열을 비교\n",
+    "\n",
+    "# case 3\n",
+    "print(list(word) == list(reversed(word)))   # list 키워드를 이용하여 문자열을 리스트로 생성\n",
+    "\n",
+    "# case 3\n",
+    "print(word == ''.join(reversed(word)))\n",
+    "\n",
+    "# 츨처 : https://dojang.io/mod/page/view.php?id=2331"
+   ]
   }
  ],
  "metadata": {
@@ -232,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
