--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/ansewr.ipynb
@@ -444,6 +444,38 @@
     "else:\n",
     "  print(\"NO\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 격자판 회문수\n",
+    "\n",
+    "# arr = [list(map(int, input().split()))]\n",
+    "arr = [\n",
+    "    [2, 4, 1, 5, 3, 2, 6],\n",
+    "    [3, 5, 1, 8, 7, 1, 7],\n",
+    "    [8, 3, 2, 7, 1, 3, 8],\n",
+    "    [6, 1, 2, 3, 2, 1, 1],\n",
+    "    [1, 3, 1, 3, 5, 3, 2],\n",
+    "    [1, 1, 2, 5, 6, 5, 2],\n",
+    "    [1, 2, 2, 2, 2, 1, 5]\n",
+    "]\n",
+    "\n",
+    "count = 0\n",
+    "for i in range(3):\n",
+    "    for j in range(7):\n",
+    "        tmp = arr[j][i:i + 5]       # 슬라이스 기능을 이용하여 0부터 4까지의 리스트를 만들어준다.\n",
+    "        if tmp == tmp[::-1]:        # 리스트를 거꾸로 만들어 두 리스트를 비교한다.\n",
+    "            count += 1\n",
+    "        for k in range(2):          # 5개의 원소를 가진 리스트이므로 2번째 까지만 비교하면 된다.\n",
+    "            if arr[i + k][j] != arr[i + 5 - k - 1][j]:\n",
+    "                break;\n",
+    "        else:                       # for else 구분을 이용한다. for문이 정상적으로 끝난다면 else를 실행한다.\n",
+    "            count += 1              "
+   ]
   }
  ],
  "metadata": {
@@ -462,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
