--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/3.탐색-시뮬레이션/practice.ipynb
@@ -508,6 +508,52 @@
     "\n",
     "# 리스트에서 중복된 값을 어떻게 찾는가"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 격자판 회문수\n",
+    "\n",
+    "# 회문을 검증하는 방법\n",
+    "\n",
+    "# arr = [list(map(int, input().split())) for _ in range(7)]\n",
+    "arr = [\n",
+    "    [2, 4, 1, 5, 3, 2, 6],\n",
+    "    [3, 5, 1, 8, 7, 1, 7],\n",
+    "    [8, 3, 2, 7, 1, 3, 8],\n",
+    "    [6, 1, 2, 3, 2, 1, 1],\n",
+    "    [1, 3, 1, 3, 5, 3, 2],\n",
+    "    [1, 1, 2, 5, 6, 5, 2],\n",
+    "    [1, 2, 2, 2, 2, 1, 5]\n",
+    "]\n",
+    "\n",
+    "# 회문검사기\n",
+    "# def isPalindrom(arr, count):\n",
+    "#     for i in range(5):\n",
+    "#         if arr[i] == arr[5 - i - 1]\n",
+    "#             count += 1\n",
+    "\n",
+    "count = 0\n",
+    "for i in range(7):\n",
+    "    for j in range(3):\n",
+    "        if all(arr[i][j + k] == arr[i][j + 5 - k - 1] for k in range(2)):\n",
+    "            count += 1\n",
+    "        if all(arr[j + k][i] == arr[j + 5 - k - 1][i] for k in range(2)):\n",
+    "            count += 1\n",
+    "\n",
+    "print(count)"
+   ]
   }
  ],
  "metadata": {
@@ -526,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
