--- a/Algorithm/Python/lecture/youtube/3.sort/sort.ipynb
+++ b/Algorithm/Python/lecture/youtube/3.sort/sort.ipynb
@@ -49,19 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
      ]
     }
    ],
    "source": [
-    "array = [8, 2, 1, 0, 3, 4, 7, 9, 6, 5]\n",
+    "array = [8, 2, 1, 0, 3, 4, 7, 9, 6, 5, 10]\n",
     "\n",
     "for i in range(1, len(array)):\n",
     "    for j in range(i, 0, -1):    \n",
