Python/이분탐색/랜선자르기

--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/practice.ipynb
@@ -36,6 +36,83 @@
     "\n",
     "print(binary_search(0, len(a), a, m))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 23, 28, 32, 40, 55, 57, 65, 81, 87, 99]\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 이분탐색\n",
+    "\n",
+    "# 8 32\n",
+    "# 23 87 65 12 57 32 99 81\n",
+    "\n",
+    "# n, m = map(int, input().split())\n",
+    "# a = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    "n, m = 8, 40\n",
+    "a = [23, 87, 65, 12, 57, 32, 99, 81, 28, 40, 55]\n",
+    "\n",
+    "a.sort()\n",
+    "\n",
+    "def binary_search(start, end, arr, value):\n",
+    "    while start <= end:\n",
+    "        mid = (start + end) // 2\n",
+    "        if value == arr[mid]:\n",
+    "            return mid + 1\n",
+    "        if value < arr[mid]:\n",
+    "            end = mid + 1\n",
+    "        if value > arr[mid]:\n",
+    "            start = mid - 1\n",
+    "\n",
+    "print(a)\n",
+    "print(binary_search(0, n - 1, a, m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['802', '743', '457', '539']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 랜선자르기 (결정알고리즘)\n",
+    "\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "\n",
+    "a = []\n",
+    "for _ in range(n):\n",
+    "    a.append(int(input()))\n",
+    "\n",
+    "res = 0\n",
+    "def binary_search(start, end, a, count):\n",
+    "    mid = (start + end) // 2\n",
+    "    totalSum = 0\n",
+    "    for i in a:\n",
+    "        totalSum += (i // mid)\n",
+    "    if count > totalSum:\n",
+    "        \n",
+    "    \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -54,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
