--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
@@ -10,13 +10,52 @@
     "\n",
     "# 8 32\n",
     "# 23 87 65 12 57 32 99 81\n",
-    "\n"
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "a = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    "a.sort()\n",
+    "\n",
+    "lt = 0\n",
+    "rt = n - 1\n",
+    "while lt <= rt:\n",
+    "    mid = (lt + rt) // 2\n",
+    "    if a[mid] == m:\n",
+    "        print(mid + 1)\n",
+    "        break\n",
+    "    elif a[mid] > m:\n",
+    "        rt = mid - 1\n",
+    "    else:\n",
+    "        lt = mid + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
