--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/practice.ipynb
@@ -81,36 +81,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['802', '743', '457', '539']\n"
+      "200\n"
      ]
     }
    ],
    "source": [
     "# 랜선자르기 (결정알고리즘)\n",
     "\n",
+    "# 중앙값을 반복하며 11개의 케이블을 자를수 있는 최대값을 찾는 문제\n",
+    "# 11개의 케이블이 나올때까지 계속 돌며 start와 end의 값이 같을때까지 찾도록 만든다.\n",
+    "\n",
+    "# n, m = map(int, input().split())\n",
+    "# a = []\n",
+    "# for _ in range(n):\n",
+    "#     a.append(int(input()))\n",
+    "\n",
+    "n, m = 4, 11\n",
+    "a = [802, 743, 457, 539]\n",
+    "\n",
+    "def binary_search(start, end, a, count):\n",
+    "    result = []\n",
+    "    while start <= end:\n",
+    "        mid = (start + end) // 2\n",
+    "        totalSum = 0\n",
+    "        for each in a:\n",
+    "            totalSum += each // mid\n",
+    "        if count == totalSum:\n",
+    "            result.append(mid)\n",
+    "            start = mid + 1\n",
+    "        elif count > totalSum:\n",
+    "            end = mid - 1\n",
+    "        elif count < totalSum:\n",
+    "            start = mid + 1\n",
+    "    return result;\n",
+    "\n",
+    "maxLength = max(a)\n",
+    "print(max(binary_search(0, maxLength, a, m)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 뮤직비디오 (결정알고리즘)\n",
     "\n",
     "n, m = map(int, input().split())\n",
+    "a = [list(map(int, input().split()))]\n",
     "\n",
-    "a = []\n",
-    "for _ in range(n):\n",
-    "    a.append(int(input()))\n",
-    "\n",
-    "res = 0\n",
-    "def binary_search(start, end, a, count):\n",
-    "    mid = (start + end) // 2\n",
-    "    totalSum = 0\n",
-    "    for i in a:\n",
-    "        totalSum += (i // mid)\n",
-    "    if count > totalSum:\n",
-    "        \n",
-    "    \n",
     "\n"
    ]
   }
@@ -131,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
