Python/Algorithm/이분탐색/마굿간 정하기(1)

--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
@@ -12,18 +12,18 @@
     "# 23 87 65 12 57 32 99 81\n",
     "\n",
     "n, m = map(int, input().split())\n",
-    "a = [list(map(int, input().split())) for _ in range(n)]\n",
+    "music = [list(map(int, input().split())) for _ in range(n)]\n",
     "\n",
-    "a.sort()\n",
+    "music.sort()\n",
     "\n",
     "lt = 0\n",
     "rt = n - 1\n",
     "while lt <= rt:\n",
     "    mid = (lt + rt) // 2\n",
-    "    if a[mid] == m:\n",
+    "    if music[mid] == m:\n",
     "        print(mid + 1)\n",
     "        break\n",
-    "    elif a[mid] > m:\n",
+    "    elif music[mid] > m:\n",
     "        rt = mid - 1\n",
     "    else:\n",
     "        lt = mid + 1"
@@ -40,24 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n"
+      "9\n"
      ]
     }
    ],
    "source": [
     "# 뮤직 비디오\n",
     "\n",
-    "def count(cap):\n",
+    "def countDVD(cap):\n",
     "    cnt = 1\n",
     "    sum = 0\n",
-    "    for x in a:\n",
+    "    for x in music:\n",
     "        if sum + x > cap:       # 연속해서 더하며 들어온 용량보다 클때는 cnt를 높이고 sum을 다음값으로 초기화한다.\n",
     "            cnt += 1\n",
     "            sum = x\n",
@@ -68,22 +68,58 @@
     "# n, m = map(int, input().split())\n",
     "# a = list(map(int, input().split()))\n",
     "\n",
-    "n, m = 9, 3\n",
-    "a = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "n, m = 9, 9                     # 노래 갯수              \n",
+    "music = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "maxx = max(music)               # 하나의 DVD는 무조건 가장 긴 곡중 하나의 노래를 담고있어야 한다.\n",
     "\n",
     "lt = 0\n",
-    "rt = sum(a)\n",
+    "rt = sum(music)\n",
     "result = 0\n",
     "while lt <= rt:\n",
     "    mid = (lt + rt) // 2\n",
     "    totalSum = 0\n",
-    "    if count(mid) <= m:\n",
+    "    if mid >= maxx and countDVD(mid) <= m:\n",
     "        result = mid\n",
     "        rt = mid - 1            # 최초 중간값은 23, 용량이 23일때 3개의 DVD로 만들수 있음, 그 보다 더 큰 용량으로도 충분하므로 작은 용량일때를 확인한다.\n",
     "    else:\n",
     "        lt = mid + 1\n",
     "\n",
-    "print(result)"
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 마굿간 정하기 (결정 알고리즘)\n",
+    "\n",
+    "# 리스트에서 처음과 끝값을 이분한 값이 말과 말의 최대거리를 뜻하게 된다고 한다.\n",
+    "\n",
+    "n, c = 5, 3\n",
+    "xi = [1, 2, 4, 8, 9]\n",
+    "\n",
+    "lt = xi[0]\n",
+    "rt = xi[-1]\n",
+    "while lt <= rt:\n",
+    "    midValue = (lt + rt) // 2\n",
+    "    startValue = xi[0]\n",
+    "    cnt = 0\n",
+    "    for j in range(1, len(xi) - 1):\n",
+    "        maxValue = startValue - xi[j]\n",
+    "        if maxValue >= mid:\n",
+    "            result = maxValue\n",
+    "            startValue = xi[j]\n",
+    "            cnt += 1\n",
+    "    if cnt  c:\n",
+    "        result = 0\n",
+    "\n",
+    "            \n",
+    "\n",
+    "        \n",
+    "        \n"
    ]
   }
  ],
