--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/practice.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,14 +107,14 @@
     "a = [802, 743, 457, 539]\n",
     "\n",
     "def binary_search(start, end, a, count):\n",
-    "    result = []\n",
     "    while start <= end:\n",
     "        mid = (start + end) // 2\n",
     "        totalSum = 0\n",
     "        for each in a:\n",
     "            totalSum += each // mid\n",
     "        if count == totalSum:\n",
-    "            result.append(mid)\n",
+    "            result = mid\n",
+    "            # result.append(mid)\n",
     "            start = mid + 1\n",
     "        elif count > totalSum:\n",
     "            end = mid - 1\n",
@@ -123,7 +123,8 @@
     "    return result;\n",
     "\n",
     "maxLength = max(a)\n",
-    "print(max(binary_search(0, maxLength, a, m)))"
+    "# print(max(binary_search(0, maxLength, a, m)))\n",
+    "print(binary_search(0, maxLength, a, m))"
    ]
   },
   {
@@ -135,8 +136,29 @@
     "# 뮤직비디오 (결정알고리즘)\n",
     "\n",
     "n, m = map(int, input().split())\n",
-    "a = [list(map(int, input().split()))]\n",
+    "a = list(map(int, input().split()))\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 마굿간 정하기 (결정알고리즘)\n",
+    "\n",
+    "# C 마리의 말, 가장 가까운 두 말의 거리가 최대가 되게 말을 마구간에 배치한다.\n",
+    "# C 마리의 말을 N개의 마구간에 배치했을 때 가장 가까운 두 말의 거리가 최대가 되는 그 최대값을 출력하라\n",
+    "\n",
+    "# n, c : 마굿간의 수, 말의 수\n",
+    "# xi :  마구간의 좌표\n",
+    "\n",
+    "n, c = map(int, input().split())\n",
+    "xi = [i for i in range(n)]\n",
+    "\n",
+    "xi.sort()\n",
     "\n"
    ]
   }
