--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/answer.ipynb
@@ -90,36 +90,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 마굿간 정하기 (결정 알고리즘)\n",
     "\n",
     "# 리스트에서 처음과 끝값을 이분한 값이 말과 말의 최대거리를 뜻하게 된다고 한다.\n",
     "\n",
-    "n, c = 5, 3\n",
-    "xi = [1, 2, 4, 8, 9]\n",
-    "\n",
-    "lt = xi[0]\n",
-    "rt = xi[-1]\n",
-    "while lt <= rt:\n",
-    "    midValue = (lt + rt) // 2\n",
-    "    startValue = xi[0]\n",
-    "    cnt = 0\n",
-    "    for j in range(1, len(xi) - 1):\n",
-    "        maxValue = startValue - xi[j]\n",
-    "        if maxValue >= mid:\n",
-    "            result = maxValue\n",
-    "            startValue = xi[j]\n",
+    "def Count(len):\n",
+    "    cnt = 1                 # 말 한마리로 시작\n",
+    "    endPoint = Line[0]        # 마굿간에 위치시킨 말의 위치\n",
+    "    for i in range(1, n):\n",
+    "        if Line[i] - endPoint >= len:\n",
     "            cnt += 1\n",
-    "    if cnt  c:\n",
-    "        result = 0\n",
+    "            endPoint = Line[i]\n",
+    "    return cnt\n",
     "\n",
-    "            \n",
+    "n, c = 5, 3\n",
+    "Line = [1, 2, 8, 4, 9]\n",
     "\n",
-    "        \n",
-    "        \n"
+    "Line.sort()\n",
+    "\n",
+    "lt = Line[0]\n",
+    "rt = Line[n - 1]\n",
+    "while lt <= rt:\n",
+    "    mid = (lt + rt) // 2\n",
+    "    if Count(mid) >= c:\n",
+    "        res = mid\n",
+    "        lt = mid + 1\n",
+    "    else:\n",
+    "        rt = mid - 1\n",
+    "\n",
+    "print(res)"
    ]
   }
  ],
@@ -139,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
