--- a/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/practice.ipynb
+++ b/Algorithm/Python/lecture/inflearn/Basic-lecture/4.이분탐색/practice.ipynb
@@ -143,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# 마굿간 정하기 (결정알고리즘)\n",
     "\n",
@@ -155,11 +163,34 @@
     "# n, c : 마굿간의 수, 말의 수\n",
     "# xi :  마구간의 좌표\n",
     "\n",
-    "n, c = map(int, input().split())\n",
-    "xi = [i for i in range(n)]\n",
+    "# n, c = map(int, input().split())\n",
+    "# xi = [i for i in range(n)]\n",
+    "\n",
+    "def Count(maxLen): \n",
+    "    cnt = 1             # 처음 마굿간에 말을 하나 넣고 시작\n",
+    "    endPoint = xi[0]    # 시작점 (처음 마굿간의 위치)\n",
+    "    for i in range(1, n):\n",
+    "        if xi[i] - endPoint >= maxLen:\n",
+    "            cnt += 1\n",
+    "            endPoint = xi[i]\n",
+    "    return cnt\n",
+    "\n",
+    "n, c = 8, 3\n",
+    "xi = [1, 2, 4, 8, 9, 11, 20, 21]\n",
     "\n",
     "xi.sort()\n",
-    "\n"
+    "\n",
+    "lt = xi[0]\n",
+    "rt = xi[n - 1]\n",
+    "while lt <= rt:\n",
+    "    midValue = (lt + rt) // 2   # 가장 작은값과 먼값의 중간으로 최대거리를 구한다? 리스트의 값을 mid로 사용할지 index를 사용할지 구분해야한다.\n",
+    "    if Count(midValue) >= c:\n",
+    "        res = midValue\n",
+    "        lt = midValue + 1\n",
+    "    else:\n",
+    "        rt = midValue - 1\n",
+    "\n",
+    "print(res)"
    ]
   }
  ],
@@ -179,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
